--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/index.css">
     <title>Pagina inicial</title>
 </head>
 <body>
@@ -13,6 +14,9 @@
             <ul>
                 <li>
                     <a href="index.html">Pagina Inicial</a>
+                </li>
+                <li>
+                    <a href="html/formulario.html">Formulario de cadastro</a>
                 </li>
             </ul>
         </nav>
