--- a/html/formulario.html
+++ b/html/formulario.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./../css/index.css">
+    <link rel="stylesheet" href="./../css/formulario.css">
     <title>formulario de cadastro</title>
 </head>
 <body>
@@ -76,6 +77,7 @@
                     <label for="endereço" title="ENDEREÇO">ENDEREÇO</label>
                     <textarea rows="4" cols="50"></textarea>
                 </div>
+                <input type="submit" value="ENVIAR">
             </form>
         </div>
     </div>
