feat(frontend) adiciona tabela

--- a/html/formulario.html
+++ b/html/formulario.html
@@ -19,6 +19,9 @@
                 <li>
                     <a href="formulario.html">Formulario de cadastro</a>
                 </li>
+                <li>
+                    <a href="tabela.html">Tabela</a>
+                </li>
             </ul>
         </nav>
         <hr />
