--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <li>
                     <a href="html/formulario.html">Formulario de cadastro</a>
                 </li>
+                <li>
+                    <a href="html/tabela.html">tabela</a>
+                </li>
             </ul>
         </nav>
         <hr />
