feat(frontend) adiciona arvore dom

--- a/html/arquivo-dom.html
+++ b/html/arquivo-dom.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Pagina inicial</title>
+    <link rel="stylesheet" href="./../css/arquivo-dom.css">
+    <title>Arquivo dom</title>
 </head>
 <body>
     <div>
-        <h1>Pagina inicial</h1>
+        <h1>Arquivo Dom</h1>
         <hr />
         <nav>
             <ul>
@@ -22,11 +22,20 @@
                     <a href="html/tabela.html">tabela</a>
                 </li>
                 <li>
-                    <a href="html/arquivo-dom.html">arvore-DOM</a>
+                    <a href="arquivo-dom.html">arvore-DOM</a>
                 </li>
             </ul>
         </nav>
         <hr />
+        <figure>
+            <a
+                href="https://tableless.com.br/entendendo-o-dom-document-object-model/"
+                target="_blank">
+                <img
+                    src="./../img/arvore-DOM.png"
+                    alt="Árvore DOM" />
+            </a>
+        </figure>
     </div>
 </body>
 </html>
